# ml_chatbot

./: .gitignore  Dockerfile  app.py  predict.py  pyproject.toml  readme.md  train.py  utils.py
data/: data.json
