[project]
name = "ml-chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Hadia Eshanzada"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn (>=1.6.1,<2.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "streamlit (>=1.44.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
